# exam-review-skill

./: README.md
exam-review-skill/: LICENSE  README.md  pyproject.toml  requirements.txt
exam-review-skill/docs/: api_reference.md  usage_guide.md
exam-review-skill/examples/: demo.py  demo_notes.md  mindmap_export.md  sample_input.json  sample_output.json
exam-review-skill/src/exam_review_skill/: __init__.py  cli.py  main.py
exam-review-skill/src/exam_review_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
exam-review-skill/src/exam_review_skill/console/: __init__.py  app.py
exam-review-skill/src/exam_review_skill/console/components/: download.py  preview.py  upload.py
exam-review-skill/src/exam_review_skill/graph/: __init__.py  builder.py  export.py  models.py  query.py
exam-review-skill/src/exam_review_skill/graph/templates/: graph.html
exam-review-skill/src/exam_review_skill/llm/: __init__.py  analyzer.py  chunker.py  client.py  fallback.py  prompts.py  question_gen.py
exam-review-skill/src/exam_review_skill/material/: __init__.py  generator.py
exam-review-skill/src/exam_review_skill/mcp_server/: __init__.py  server.py
exam-review-skill/src/exam_review_skill/mcp_server/tools/: generate.py  parse.py  query.py  review.py
exam-review-skill/src/exam_review_skill/mindmap/: __init__.py  generator.py
exam-review-skill/src/exam_review_skill/parser/: __init__.py  docx_parser.py  md_parser.py  models.py  pdf_parser.py  pptx_parser.py  txt_parser.py
exam-review-skill/src/exam_review_skill/schema/: models.py
exam-review-skill/src/exam_review_skill/structurer/: __init__.py  tree_builder.py
exam-review-skill/src/exam_review_skill/utils/: __init__.py  helpers.py
exam-review-skill/tests/: test_material.py  test_mindmap.py  test_parser.py  test_schema.py
exam-review-skill/tests/test_graph/: test_core.py
exam-review-skill/tests/test_llm/: test_core.py
